# blinking-baby-cmake

./: .gitignore  .mxproject  CMakeLists.txt  README.md  test-compiler.ioc
.cache/clangd/index/: FreeRTOS.h.876BBDECA4441DF2.idx  FreeRTOSConfig.h.85EE7D6DBEB2D029.idx  cmsis_compiler.h.B8CDCAC8B0983207.idx  cmsis_gcc.h.C87637631568FBD8.idx  cmsis_os.h.C021E5EEFEBD4D72.idx  cmsis_os2.c.0A43AAC1A4358CF7.idx  cmsis_os2.h.C803ED253EB17800.idx  cmsis_version.h.1488DACB77F33329.idx  core_cm7.h.0C9293134AD7FDA7.idx  croutine.c.B03982B2382A1831.idx  croutine.h.13D879AA2533191A.idx  deprecated_definitions.h.58C6B16250763446.idx  event_groups.c.5BE4AA039C3F0E3E.idx  event_groups.h.51B229F3672A06FF.idx  freertos_mpool.h.3A0E1686E093B5FB.idx  freertos_os2.h.4BD576B65D9F6662.idx  heap_4.c.BC087AA3587CD134.idx  list.c.8F05BCFF6E7598A5.idx  list.h.24BCA59348C0B28B.idx  main.c.3D74DAEF21C7696D.idx  main.h.EED4A78319720D23.idx  mpu_armv7.h.E800A263595BE47D.idx  mpu_wrappers.h.57DD342B17DBF13D.idx  port.c.F29DB3CE3CFA7D07.idx  portable.h.F8C217590065DA4E.idx  portmacro.h.EFCD9E46A05FE605.idx  projdefs.h.48576AAFD6110BC5.idx  queue.c.140E8577AABB501E.idx  queue.h.5FF6A6742ABC50AF.idx  semphr.h.4E533D35CBF99237.idx  stack_macros.h.9819AF3A81E559F8.idx  stm32_hal_legacy.h.16FD26C12CFCC922.idx  stm32h743xx.h.AE819456AF81E2CB.idx  stm32h7xx.h.76806E0E45A35853.idx  stm32h7xx_hal.c.A59BAF4A36B69FCD.idx  stm32h7xx_hal.h.54AC16B91704E6E2.idx  stm32h7xx_hal_adc.c.DC2B688606779A47.idx  stm32h7xx_hal_adc_ex.c.9DDD046C2ADDDE7F.idx  stm32h7xx_hal_cec.c.98BBD8A998D01B45.idx  stm32h7xx_hal_comp.c.522E63BE78B3FA90.idx  (+145 more)
Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h
Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
